--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "type": "commonjs",
     "name": "qr-generator",
     "version": "1.0.0",
     "description": "Building and Deploying an API service that generates QR codes from scratch",
@@ -20,7 +21,6 @@
     "devDependencies": {
         "nodemon": "^2.0.7"
     },
-    "type": "module",
     "dependencies": {
         "express": "^4.17.1"
     }
