--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Building and Deploying an API service that generates QR codes from scratch",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha --recursive --exit",
         "start": "nodemon server.js"
     },
     "repository": {
@@ -22,7 +22,10 @@
         "nodemon": "^2.0.7"
     },
     "dependencies": {
+        "@nuintun/qrcode": "^3.0.1",
+        "convert-svg-to-jpeg": "^0.5.0",
         "ejs": "^3.1.6",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "qr-decode-encode": "^1.0.1"
     }
 }
