--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "index.js",
     "scripts": {
         "test": "mocha --recursive --exit",
-        "start": "nodemon server.js"
+        "start": "node server.js"
     },
     "repository": {
         "type": "git",
