--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@nuintun/qrcode": "^3.0.1",
         "convert-svg-to-jpeg": "^0.5.0",
+        "cors": "^2.8.5",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "qr-decode-encode": "^1.0.1"
